--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <div id="map" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></div>
     <script src="http://cdn.leafletjs.com/leaflet-0.7.5/leaflet.js"></script>
-    <script src="../src/leaflet.rightclickzoom.js"></script>
+    <script src="src/leaflet.rightclickzoom.js"></script>
     <script>
       var map = L.map('map', {
         center: [33.682286, -117.795710],
