--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
     <script src="http://cdn.leafletjs.com/leaflet-0.7.5/leaflet.js"></script>
     <script src="src/leaflet.rightclickzoom.js"></script>
     <script>
-      var map = L.map('map', {
+      var map;
+      map = L.map('map', {
         center: [33.682286, -117.795710],
-        zoom: 12
+        zoom: 12,
+        zoomControl: true
       });
       L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
         attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors'
